code25_all/scala/1566315.txt
val a : Integer = 1;
val b : Integer = a + 1;

<console>:5: error: type mismatch;
 found   : Int(1)
 required: String
       val b : Integer = a +1
                            ^

